a href nav bar modification

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="logo">
                 <p>ASMA</p>
             </div>
-            <a href="" class="dumbo">Popular Places</a><br>
-            <a href="" class="dumbo">Travel Outside</a><br>
-            <a href="" class="dumbo">Online Packages</a>
+            <a href="page2.html" class="dumbo">Popular Places</a><br>
+            <a href="page3.html" class="dumbo">Travel Outside</a><br>
+            <a href="index.html" class="dumbo">Online Packages</a>
 
             <div class="nav-button-container">
                 <a href="" class="nav-button">Register Now</a>
